# research-knowledge-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
research_knowledge/: __init__.py  __main__.py  bm25_index.py  chunking.py  cli.py  concept_resolver.py  contextualizer.py  embedding.py  index.py  ingest.py  metadata_extractor.py  models.py  parsing.py  paths.py  search.py  server.py  summarizer.py
research_knowledge/ingest/: chunking.py  contextualizer.py  parsing.py  pipeline.py
research_knowledge/llm/: auth.py  concept_resolver.py  summarizer.py
research_knowledge/retrieval/: bm25_index.py  chunk_store.py  embedding.py  index.py  reranker.py  search.py
research_knowledge/tests/: test_chunk_store.py  test_server_threading.py
