[project]
name = "research-knowledge-mcp"
version = "0.1.0"
description = "Academic paper RAG over MCP — Contextual Retrieval, hybrid search (BM25 + dense), and cross-encoder reranking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nous-trading" }]
keywords = ["mcp", "rag", "retrieval", "contextual-retrieval", "anthropic", "papers", "academic", "faiss", "bm25"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.2.0",
    "anthropic>=0.50.0",
    "docling>=2.0.0",
    "FlagEmbedding>=1.3.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "faiss-cpu>=1.8.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "pydantic>=2.9.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/nous-trading/research-knowledge-mcp"
Repository = "https://github.com/nous-trading/research-knowledge-mcp"

[project.scripts]
research-knowledge = "research_knowledge.cli:app"
research-knowledge-mcp = "research_knowledge.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["research_knowledge"]
